--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ DB_USER=root
 DB_PASSWORD=Sahil@8857
 DB_HOST=localhost
 JWT_SECRET=sahilshekh1234
-MONGO_URI="mongodb://127.0.0.1:27017/clientManagement"
+# MONGO_URI="mongodb://127.0.0.1:27017/clientManagement"
+MONGO_URI="mongodb+srv://sahilshekh885799:deMo3kjtqZcDthXM@cluster0.xhxdl.mongodb.net/clientManagement"
